--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 </head>
 <body> 
-<video controls width="50%" height="50%">
+<video controls width="50%" height="50%" autoplay>
 <source src="ric.mp4" controls></video>
 </body>
 </html>
