--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 </head>
 <body> 
 <video controls width="50%" height="50%">
-<source src="ric.mp4" loop autoplay controls></video>
+<source src="ric.mp4" loop autoplay></video>
 </body>
 </html>
