--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 </head>
 <body> 
-<video controls width="50%" height="50%">
+<video width="50%" height="50%">
 <source src="ric.mp4" loop autoplay></video>
 </body>
 </html>
